corrected alignment

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -16,7 +16,6 @@ div{
      border:1px solid red;
 }
 .MuiTimelineItem-root{
-     width:100%;
      align-self: flex-start;
 }
 .hero-name{
